# dgpx

./: CMakeLists.txt  README.md
src/: .prueba.cpp.swp  .tinyxml.h.swp  CMakeLists.txt  DataContainer.cpp  DataContainer.h  XMLParser.cpp  XMLParser.h  main.cpp  prueba.cpp  tpoint.cpp  tpoint.h
src/data/: DataContainer.cpp  DataContainer.h  tpoint.cpp
src/data/EleInterpolators/: EleInterpolator.h
src/lib/: CMakeLists.txt  types.h
src/lib/data/: DataContainer.cpp  DataContainer.h
src/lib/data/EleInterpolators/: EleInterpolator.h  Simple.cpp  Simple.h  factory.h
src/lib/xmlReader/: XMLParser.cpp  XMLParser.h
